--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Тап по бургеру</title>
     <style>
+        /* Ваши стили */
         body {
             font-family: 'Arial', sans-serif;
             background-color: #e0e0e0;
@@ -16,17 +17,12 @@
             margin: 0;
             overflow: hidden;
         }
-
-        #stats {
-            display: flex;
-            justify-content: space-around;
-            width: 100%;
-            max-width: 500px;
-            margin-top: 20px;
-            color: #333;
-            font-weight: bold;
+        #register, #login, #reset {
+            margin-bottom: 20px;
         }
-
+        #game {
+            display: none;
+        }
         #burger {
             width: 40vw;
             height: 40vw;
@@ -39,7 +35,6 @@
             border-radius: 50%;
             box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
         }
-
         .button {
             background-color: #ff9800;
             color: white;
@@ -51,19 +46,16 @@
             box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
             font-weight: bold;
         }
-
         .button:disabled {
             background-color: #cccccc;
             cursor: not-allowed;
         }
-
         #energy-bar-container {
             width: 100%;
             max-width: 500px;
             margin-top: 20px;
             text-align: center;
         }
-
         #energy-bar {
             width: 100%;
             background-color: #ddd;
@@ -71,13 +63,11 @@
             overflow: hidden;
             margin: 10px 0;
         }
-
         #energy {
             height: 20px;
             background-color: #76c7c0;
             width: 100%;
         }
-
         #energy-text {
             color: #333;
             font-weight: bold;
@@ -85,29 +75,57 @@
     </style>
 </head>
 <body>
-    <div id="stats">
-        <div id="score">Клики: 0</div>
-        <div id="level">Уровень: 1</div>
+    <!-- Регистрация -->
+    <div id="register">
+        <h2>Регистрация</h2>
+        <input type="text" id="regNickname" placeholder="Введите никнейм">
+        <button id="registerBtn" class="button">Зарегистрироваться</button>
+        <p id="registerMessage"></p>
     </div>
 
-    <div id="burger"></div>
+    <!-- Вход -->
+    <div id="login">
+        <h2>Вход</h2>
+        <input type="text" id="loginNickname" placeholder="Введите никнейм">
+        <input type="text" id="loginPhrase" placeholder="Введите фразу">
+        <button id="loginBtn" class="button">Войти</button>
+        <p id="loginMessage"></p>
+    </div>
 
-    <div id="energy-bar-container">
-        <div id="energy-bar">
-            <div id="energy"></div>
+    <!-- Сброс пароля -->
+    <div id="reset">
+        <h2>Восстановление пароля</h2>
+        <input type="text" id="resetNickname" placeholder="Введите никнейм">
+        <input type="text" id="resetPhrase" placeholder="Введите фразу">
+        <button id="resetBtn" class="button">Показать пароль</button>
+        <p id="resetMessage"></p>
+    </div>
+
+    <!-- Игра -->
+    <div id="game">
+        <div id="stats">
+            <div id="score">Клики: 0</div>
+            <div id="level">Уровень: 1</div>
         </div>
-        <div id="energy-text">Энергия: 3000</div>
-    </div>
 
-    <button class="button" id="upgrade">Улучшить (Стоимость: 50)</button>
+        <div id="burger"></div>
+
+        <div id="energy-bar-container">
+            <div id="energy-bar">
+                <div id="energy"></div>
+            </div>
+            <div id="energy-text">Энергия: 3000</div>
+        </div>
+
+        <button class="button" id="upgrade">Улучшить (Стоимость: 50)</button>
+    </div>
 
     <!-- Подключение Firebase SDK -->
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.0/firebase-app.js";
         import { getFirestore, doc, setDoc, getDoc } from "https://www.gstatic.com/firebasejs/10.13.0/firebase-firestore.js";
-        import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.13.0/firebase-analytics.js";
+        import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.13.0/firebase-auth.js";
 
-        // Ваши конфигурационные данные Firebase
         const firebaseConfig = {
             apiKey: "AIzaSyDndBcV29tFvBX-RGzCIAUVEnVy8G5GdJc",
             authDomain: "whopper-a32f7.firebaseapp.com",
@@ -119,12 +137,86 @@
             measurementId: "G-PQ6JZEZMEP"
         };
 
-        // Инициализация Firebase
         const app = initializeApp(firebaseConfig);
-        const analytics = getAnalytics(app);
         const db = getFirestore(app);
+        const auth = getAuth(app);
 
-        // Инициализация переменных
+        const registerBtn = document.getElementById('registerBtn');
+        const loginBtn = document.getElementById('loginBtn');
+        const resetBtn = document.getElementById('resetBtn');
+        const gameDiv = document.getElementById('game');
+
+        // Функция генерации случайной фразы
+        const generatePhrase = () => {
+            const words = ["apple", "banana", "cherry", "date", "elderberry", "fig", "grape", "honeydew", "kiwi", "lemon"];
+            return Array.from({ length: 10 }, () => words[Math.floor(Math.random() * words.length)]).join(' ');
+        };
+
+        // Регистрация
+        registerBtn.addEventListener('click', async () => {
+            const nickname = document.getElementById('regNickname').value;
+            if (!nickname) {
+                document.getElementById('registerMessage').innerText = 'Введите никнейм';
+                return;
+            }
+            const password = generatePhrase(); // Генерация фразы как пароля
+            try {
+                await createUserWithEmailAndPassword(auth, `${nickname}@example.com`, password);
+                await setDoc(doc(db, 'users', nickname), { password: password });
+                document.getElementById('registerMessage').innerText = `Вы зарегистрированы! Фраза для входа: ${password}`;
+            } catch (error) {
+                document.getElementById('registerMessage').innerText = 'Ошибка регистрации: ' + error.message;
+            }
+        });
+
+        // Вход
+        loginBtn.addEventListener('click', async () => {
+            const nickname = document.getElementById('loginNickname').value;
+            const phrase = document.getElementById('loginPhrase').value;
+            if (!nickname || !phrase) {
+                document.getElementById('loginMessage').innerText = 'Введите никнейм и фразу';
+                return;
+            }
+            try {
+                const userDoc = doc(db, 'users', nickname);
+                const docSnap = await getDoc(userDoc);
+                if (docSnap.exists() && docSnap.data().password === phrase) {
+                    await signInWithEmailAndPassword(auth, `${nickname}@example.com`, phrase);
+                    gameDiv.style.display = 'block';
+                    document.getElementById('loginMessage').innerText = 'Вход выполнен успешно!';
+                    userId = nickname; // Установка идентификатора пользователя
+                    loadFromFirestore();
+                } else {
+                    document.getElementById('loginMessage').innerText = 'Неверный никнейм или фраза';
+                }
+            } catch (error) {
+                document.getElementById('loginMessage').innerText = 'Ошибка входа: ' + error.message;
+            }
+        });
+
+        // Восстановление пароля
+        resetBtn.addEventListener('click', async () => {
+            const nickname = document.getElementById('resetNickname').value;
+            const phrase = document.getElementById('resetPhrase').value;
+            if (!nickname || !phrase) {
+                document.getElementById('resetMessage').innerText = 'Введите никнейм и фразу';
+                return;
+            }
+            try {
+                const userDoc = doc(db, 'users', nickname);
+                const docSnap = await getDoc(userDoc);
+                if (docSnap.exists() && docSnap.data().password === phrase) {
+                    // Отображение пароля
+                    document.getElementById('resetMessage').innerText = `Ваш пароль: ${docSnap.data().password}`;
+                } else {
+                    document.getElementById('resetMessage').innerText = 'Неверный никнейм или фраза';
+                }
+            } catch (error) {
+                document.getElementById('resetMessage').innerText = 'Ошибка восстановления пароля: ' + error.message;
+            }
+        });
+
+        let userId = '';
         let taps = 0;
         let level = 1;
         let energy = 3000;
@@ -132,7 +224,6 @@
         let upgradeCost = 50;
         let tapsForNextLevel = 10;
 
-        // Элементы DOM
         const burger = document.getElementById('burger');
         const score = document.getElementById('score');
         const levelDisplay = document.getElementById('level');
@@ -140,7 +231,6 @@
         const energyText = document.getElementById('energy-text');
         const upgradeButton = document.getElementById('upgrade');
 
-        // Обновление статистики на странице
         const updateStats = () => {
             score.innerText = `Клики: ${taps}`;
             levelDisplay.innerText = `Уровень: ${level}`;
@@ -148,10 +238,11 @@
             energyText.innerText = `Энергия: ${energy}`;
             upgradeButton.innerText = `Улучшить (Стоимость: ${upgradeCost})`;
             upgradeButton.disabled = taps < upgradeCost;
+
+            // Сохранение данных в Firestore
             saveToFirestore();
         };
 
-        // Функция для уровня
         const levelUp = () => {
             if (taps >= level * tapsForNextLevel) {
                 level += 1;
@@ -160,10 +251,10 @@
             }
         };
 
-        // Функция для записи данных в Firestore
         const saveToFirestore = async () => {
+            if (!userId) return;
             try {
-                await setDoc(doc(db, 'stats', 'userStats'), {
+                await setDoc(doc(db, 'users', userId), {
                     taps: taps,
                     level: level,
                     energy: energy,
@@ -171,16 +262,16 @@
                     upgradeCost: upgradeCost,
                     tapsForNextLevel: tapsForNextLevel
                 });
-                console.log('Данные успешно сохранены в Firestore');
+                console.log('Data saved to Firestore');
             } catch (error) {
-                console.error('Ошибка при сохранении данных в Firestore', error);
+                console.error('Error saving data:', error);
             }
         };
 
-        // Функция для получения данных из Firestore
         const loadFromFirestore = async () => {
+            if (!userId) return;
             try {
-                const docRef = doc(db, 'stats', 'userStats');
+                const docRef = doc(db, 'users', userId);
                 const docSnap = await getDoc(docRef);
                 if (docSnap.exists()) {
                     const data = docSnap.data();
@@ -192,14 +283,13 @@
                     tapsForNextLevel = data.tapsForNextLevel || 10;
                     updateStats();
                 } else {
-                    console.log('Документ не существует');
+                    console.log('Document does not exist');
                 }
             } catch (error) {
-                console.error('Ошибка при получении данных из Firestore', error);
+                console.error('Error loading data:', error);
             }
         };
 
-        // Слушатели событий
         burger.addEventListener('click', () => {
             if (energy > 0) {
                 taps += pointsPerClick;
@@ -217,9 +307,6 @@
                 updateStats();
             }
         });
-
-        // Загрузка данных при запуске
-        loadFromFirestore();
     </script>
 </body>
 </html>
