--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             height: 40vw;
             max-width: 300px;
             max-height: 300px;
-            background-image: url('https://username.github.io/repository-name/burger.png');
+            background-image: url('whoppe.png');
             background-size: cover;
             margin: 30px;
             cursor: pointer;
